# libwavelet

applications/mother_demo/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  main.cc
applications/mother_demo/win32/: getopt.c  mother_demo.sln  mother_demo.vcproj
libwavelet/: libwavelet.h
libwavelet/wavelet/: wavelet.h  wavelet_base.h  wavelet_cs.h  wavelet_exception.h  wavelet_functor.h  wavelet_macros.h  wavelet_processor.h  wavelet_traits.h  wavelet_type.h  wavelet_util.h
